# eCommerce-Aggregator-Scrapper

./: pyproject.toml
src/: main.py
