[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Jenifa Rawshan <jenifa.rawshan057@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
fake-useragent = "^0.1.11"
tinydb = "^4.5.2"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
